sumo/tests/sumo/errors/network/edges/root__edges__empty/errors.sumo
Error: The number of edges in the list mismatches the edge count.
Quitting (on error).
